<resources>
    <string name="app_name">Devcash</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="add_prod">Add product</string>
    <string name="edit_prod">Edit product</string>
    <string name="add_service">Add services</string>
    <string name="edit_services">Edit services</string>
    <string name="add_employee">Add employee</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="add_category">Add category</string>
    <string name="edit_categorynavigation_drawer_open">Edit category</string>
    <string name="add_disc">Add discount</string>
    <string name="edit_disc">Edit discount</string>
    <string name="inventory">Inventory</string>
    <string name="variants">Variants</string>
    <string name="representation_pos">Representation on POS</string>
    <string name="send">SEND</string>
    <string name="save">SAVE</string>
    <string name="pay">PAY</string>
    <string name="canel">CANCEL</string>
    <string name="login_desc">LOGIN</string>
    <string name="sign_desc">SIGN UP</string>
    <string name="user_email">Username/Email</string>
    <string name="passw">Password</string>
    <string name="forgot_passw">Forgot Password?</string>
    <string name="f_password">Forgot Password</string>
    <string name="forgot_passw_desc">Enter your email address/mobile phone number to receive instructions to reset your password.</string>
    <string name="email">Email</string>
    <string name="quality_splash">QUALITY INVENTORY AND CASHIERING SYSTEM</string>
    <string name="prod_name">Product Name</string>
    <string name="category">Category</string>
    <string name="availability">This item is available for sale.</string>
    <string-array name="condition">
        <item>New</item>
        <item>Lost</item>
        <item>Disposed of</item>
        <item>Damaged</item>h
    </string-array>
    <string name="item_count">Item count</string>
    <string name="exp_date">Expiration Date</string>
    <string name="add_exp_date">ADD EXPIRATION DATE</string>
    <string name="sold_by">Sold by</string>
    <string name="each">Each</string>
    <string name="weight">Weight</string>
    <string-array name="unit">
        <item>pieces</item>
        <item>kilograms</item>
        <item>meters</item>
        <item>grams</item>
    </string-array>
    <string name="price">Price</string>
    <string name="qr_code">QR Code</string>
    <string name="service_name">Service Name</string>
    <string name="emp_name">Employee Name</string>
    <string name="email_address">Email Address</string>
    <string name="pnumber">Phone Number</string>
    <string name="task">Task</string>
    <string name="cashier">Cashier</string>
    <string name="add_pincode">ADD PIN CODE</string>
    <string name="disc">Discounts</string>
    <string name="disc_name">Discount Name</string>
    <string name="disc_code">Discount Code</string>
    <string name="type">Type</string>
    <string name="percentage">Percentage</string>
    <string name="amount">Amount</string>
    <string name="value">Value</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="category_name">Category Name</string>
    <string name="in_stock">In Stock</string>
    <string name="rop">ROP</string>
    <string name="variants_desc">Use variants of an item that has different size, color, or other options.</string>
    <string name="add_variants">ADD VARIANTS</string>
    <string name="color">Color</string>
    <string name="image">Image</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="owner">Enterprise Owner</string>
    <string name="email_addr">enterpriseowner@gmail.com</string>
    <string name="dashboard">Dashboard</string>
    <string name="sales">Sales</string>
    <string name="inventory_title">Inventory</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="discounts">Discounts</string>
    <string-array name="categories">
        <item>No category</item>
        <item>Create category</item>
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
        <item>Category 4</item>
        <item>Category 5</item>
    </string-array>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="employees">Employees</string>
    <string name="reports">Reports</string>
    <string name="salesrep">Sales Reports</string>
    <string name="inventoryrep">Inventory Reports</string>
    <string name="payment_statement">Payment Statement</string>
    <string name="receipts">Receipts</string>
    <string name="count">0</string>
    <string name="money">P 0.00</string>
    <string name="money_1">0.00</string>
    <string name="date">12/12/2012</string>
    <string name="time">10:10 AM</string>
    <string name="devcash_commission_title">Devcash Commission: </string>
    <string name="receipt_detail">Receipt Details</string>
    <string name="date_title">Date: </string>
    <string name="id">#123456</string>
    <string name="total_title">Total</string>
    <string-array name="customer_type">
        <item>Regular Customer</item>
        <item>Senior Citizen</item>
    </string-array>
    <string name="cashier_title">Cashier:</string>
    <string name="subtotal">Subtotal</string>
    <string-array name="discount">
        <item>No discount</item>
        <item>Create discount</item>
        <item>Discount 1</item>
        <item>Discount 2</item>
        <item>Discount 3</item>
        <item>Discount 4</item>
        <item>Discount 5</item>
    </string-array>
    <string name="vat">VAT</string>
    <string name="evat">E-VAT</string>
    <string name="zerorated">ZERO Rated</string>
    <string name="dev_commission">Devcash Commission</string>
    <string name="cash">Cash</string>
    <string name="change">Change</string>
    <string name="percent_title">0 %</string>
    <string name="search">Search..</string>
    <string name="search_settings">Search for settings..</string>
    <string name="profile">Profile</string>
    <string name="enterpprise">Enterprise</string>
    <string name="billing">Billing &amp; Subscription</string>
    <string name="notifs">Notifications Settings</string>
    <string name="about">About</string>
    <string name="notifs_settings">Notificatons Settings</string>
    <string name="logout">LOG OUT</string>
    <string name="title">Devcash for Android</string>
    <string name="version">Version</string>
    <string name="version_desc">2019.0.0.1.100</string>
    <string name="changename">Name</string>
    <string name="firstname">First name</string>
    <string name="middlename">Middle name</string>
    <string name="lastname">Last name</string>
    <string name="changepasswtitle">Change password</string>
    <string name="currentpassw">Current password</string>
    <string name="newpassw">New Password</string>
    <string name="verifypassw">Verify password</string>
    <string name="terms">Terms and Conditions</string>
    <string name="loremipsum1">1. Lorem ipsum dolor sit amet.</string>
    <string name="loremipsum2">2. Nullam justo arcu, dapibus at.</string>
    <string name="loremipsum3">3. Vivamus ut neque hendrerit, luctus.</string>
    <string name="loremipsum4">4. Pellentesque mattis ultricies purus, et.</string>
    <string name="loremipsum5">5. Vestibulum molestie tempor interdum. Nullam.</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis
        ex ligula. Suspendisse eget leo congue, accumsan massa sit amet, aliquet ligula. Vestibulum
        ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi blandit
        orci et nibh congue volutpat. Etiam elementum, ipsum luctus blandit mattis, augue ligula
        accumsan enim, laoreet pellentesque augue ante nec sem. Vestibulum pulvinar nisi ac massa
        placerat, et feugiat libero mattis. Maecenas vitae eros mi. Nullam non lorem sollicitudin,
        laoreet velit eget, volutpat lectus. Curabitur convallis mauris elit. Fusce scelerisque
        congue vulputate. Sed ut porttitor mi. Cras volutpat mattis lacus non faucibus. Cras ac
        risus egestas, laoreet lacus vel, feugiat lectus. Proin tempor, velit ac pulvinar tincidunt,
        enim ex volutpat velit, sed scelerisque ligula ipsum at dolor. </string>
    <string name="note">Note:</string>
    <string name="note1">* Amount to pay includes your current balance from your latest bill, plus
        any other unpaid overdue balances.</string>
    <string name="note2">* For your current billed amount for the month, please check your bill statement.</string>
    <string name="note3">* Ignore this if you have already paid your bill.</string>
    <string name="view_bill">View current bill</string>
    <string name="pay_now">Pay now</string>
    <string name="as_of">As of today,</string>
    <string name="due_on">Due on</string>
    <string name="amount_pay">Amount to pay</string>
    <string name="subscription_details">Subscription details</string>
    <string name="view_account">View account details</string>
    <string name="subscription_for">Subscription for</string>
    <string name="monthly">monthly</string>
    <string name="prev_payments">Previous payments</string>
    <string name="subscription_type">Subscription type</string>
    <string name="new_title">New</string>
    <string name="damaged_title">Damaged</string>
    <string name="lost_title">Lost</string>
    <string name="disposedof_title">Disposed of</string>
    <string name="tobe_rep">To be replenished</string>
    <string name="expiring_soon">Expiring soon</string>
    <string name="discounted_items">Discounted items</string>
    <string name="refund">Refund</string>
    <string name="send_email">Send via Email</string>
    <string name="send_text">Send view SMS</string>
    <string name="bdate">Birthdate</string>
    <string name="search_title">Search</string>
    <string name="action_spinner">Discount Spinner</string>
    <string name="choose_photo">Choose photo</string>
    <string name="take_photo">Take photo</string>
    <string name="payment_info_title">Payment Info</string>
    <string name="statement_for">Your statement for</string>
    <string name="beg_balance">Beginning Balance</string>
    <string name="prev_statement_balance">Previous Statement Balance</string>
    <string name="devcash_fees">Devcash Fees</string>
    <string name="close_balance">Closing Balance</string>
    <string name="statement_tobe_paid">Statement to be paid on or before</string>
    <string name="premium_fee">Premium Fee</string>
    <string name="billing_for">Billing Summary for</string>
    <string name="pay_id">Payment ID</string>
    <string name="basic_comm">Basic/Commission Fee</string>
    <string name="prem_fee">Premium Fee</string>
    <string name="total_due">Total amount due</string>
    <string name="cash_received">Enter Cash Received</string>
    <string name="charge">Charge</string>
</resources>