<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentStatementFragment"
    android:orientation="vertical"
    android:background="@color/whiteDarker">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:clipToPadding="false">

            <android.support.v7.widget.CardView
                android:id="@+id/paystatement_card"
                android:layout_width="650dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:layout_marginTop="@dimen/padding_30"
                android:layout_marginBottom="@dimen/padding_top"
                android:background="@color/whiteBG"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="647dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_30"
                    android:layout_marginBottom="@dimen/padding_30"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_30"
                    android:paddingRight="@dimen/padding_30"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_pay"
                        android:textColor="@color/dark_text"
                        android:textStyle="bold"
                        android:textSize="@dimen/page_title"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/as_of"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:paddingLeft="5dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/money"
                                android:textColor="@color/dark_text"
                                android:textStyle="bold"
                                android:textSize="@dimen/page_title"
                                android:paddingTop="20sp"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/due_on"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/date"
                                    android:paddingLeft="5dp" />

                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_gravity="center"
                            android:padding="@dimen/text_padding">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/pay_now"
                                android:gravity="right"
                                android:paddingRight="20sp"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold"
                                android:textAllCaps="true"
                                android:textSize="@dimen/text_inputs"/>
                        </LinearLayout>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/view_bill"
                        android:paddingTop="@dimen/padding_30"
                        android:paddingBottom="@dimen/padding_30"
                        android:textSize="@dimen/text_inputs"
                        android:textColor="@color/colorPrimary"
                        android:textAllCaps="true"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/padding_30">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/note"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/note1"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/note2"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/note3"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/subscriptiondetails_card"
                android:layout_width="650dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:layout_marginTop="@dimen/padding_30"
                android:layout_marginBottom="@dimen/padding_top"
                android:background="@color/whiteBG"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="647dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_30"
                    android:layout_marginBottom="@dimen/padding_30"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_30"
                    android:paddingRight="@dimen/padding_30"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subscription_details"
                        android:textColor="@color/dark_text"
                        android:textSize="@dimen/page_title"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/padding_30">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/subscription_type"
                            android:textColor="@color/dark_text"
                            android:textSize="@dimen/text_inputs"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="for"
                            android:paddingLeft="5dp"
                            android:textColor="@color/dark_text"
                            android:textSize="@dimen/text_inputs"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/money_1"
                            android:textColor="@color/dark_text"
                            android:paddingLeft="5dp"
                            android:textSize="@dimen/text_inputs"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/monthly"
                            android:textColor="@color/dark_text"
                            android:textSize="@dimen/text_inputs"
                            android:paddingLeft="5dp"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_30"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:text="@string/view_account"
                        android:textAllCaps="true"
                        android:textSize="@dimen/text_inputs"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_30"
                android:paddingLeft="@dimen/padding_30"
                android:paddingRight="@dimen/text_padding"
                android:text="@string/prev_payments"
                android:textSize="@dimen/page_title"
                android:textColor="@color/dark_text"/>

            <ListView
                android:id="@+id/listview_prevstatements"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/text_padding"
                android:dividerHeight="1dp"
                android:layout_marginLeft="@dimen/text_inputs"
                android:layout_marginRight="@dimen/text_inputs"/>

        </LinearLayout>



    </ScrollView>


</LinearLayout>