<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.CustomerChargeFragment"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_purchaseitemlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/AppTheme"
        style="@style/PrimaryHeaderBar"
        android:elevation="4dp"
        android:visibility="gone">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/text_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/money_1"
            android:gravity="center"
            android:textColor="@color/dark_text"
            android:textSize="30dp"
            android:paddingTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total_due"
            android:textSize="@dimen/text_inputs"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/customer_cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cash_received"
                android:inputType="text"
                android:padding="@dimen/text_padding"
                android:drawableLeft="@drawable/ic_icon"
                android:drawablePadding="@dimen/text_padding"
                android:drawableTint="@color/icon_light"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <Button
                android:id="@+id/btn_chargepurchase"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/charge"
                android:textColor="@color/whiteBG"
                android:background="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>